[gd_scene load_steps=38 format=2]

[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00005.png" type="Texture" id=1]
[ext_resource path="res://Components/Player.gd" type="Script" id=2]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00004.png" type="Texture" id=3]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00005.png" type="Texture" id=4]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00010.png" type="Texture" id=5]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00009.png" type="Texture" id=6]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00011.png" type="Texture" id=7]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00008.png" type="Texture" id=8]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00006.png" type="Texture" id=9]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00008.png" type="Texture" id=10]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00004.png" type="Texture" id=11]
[ext_resource path="res://Components/Bob/walk_side/Boy-Walk-Side_00007.png" type="Texture" id=12]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00009.png" type="Texture" id=13]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00007.png" type="Texture" id=14]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00010.png" type="Texture" id=15]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00011.png" type="Texture" id=16]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00018.png" type="Texture" id=17]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00004.png" type="Texture" id=18]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00005.png" type="Texture" id=19]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00017.png" type="Texture" id=20]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00006.png" type="Texture" id=21]
[ext_resource path="res://Components/Bob/walk_back/Boy-Walk-Back_00006.png" type="Texture" id=22]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00011.png" type="Texture" id=23]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00019.png" type="Texture" id=24]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00007.png" type="Texture" id=25]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00009.png" type="Texture" id=26]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00010.png" type="Texture" id=27]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00012.png" type="Texture" id=28]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00008.png" type="Texture" id=29]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00014.png" type="Texture" id=30]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00013.png" type="Texture" id=31]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00015.png" type="Texture" id=32]
[ext_resource path="res://Components/Bob/idle/Boy-Walk-Idle_00016.png" type="Texture" id=33]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 25.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_side",
"speed": 25.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk_back",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 2 )
animation = "walk_side"
frame = 1
playing = true

[node name="MoveTween" type="Tween" parent="."]

[node name="MoveColliders" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColliderUp" type="Area2D" parent="MoveColliders"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveColliders/ColliderUp"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="ColliderDown" type="Area2D" parent="MoveColliders"]
position = Vector2( 0, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveColliders/ColliderDown"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="ColliderLeft" type="Area2D" parent="MoveColliders"]
position = Vector2( -32, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveColliders/ColliderLeft"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="ColliderRight" type="Area2D" parent="MoveColliders"]
position = Vector2( 32, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveColliders/ColliderRight"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="ActionArea" type="Area2D" parent="."]
position = Vector2( 0, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
shape = SubResource( 5 )

[node name="PickupPosition" type="Position2D" parent="."]
position = Vector2( 0, -48 )

[node name="WalkSound" type="AudioStreamPlayer" parent="."]

[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="area_entered" from="ActionArea" to="." method="_on_ActionArea_area_entered"]
[connection signal="area_exited" from="ActionArea" to="." method="_on_ActionArea_area_exited"]
